[SPInvalidation] Invalidate paint property when transform etc. change

CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
BUG=671695
TEST=virtual/spinvalidation/paint/invalidation/animated-gif-transformed-offscreen.html (repeat many times)

Review-Url: https://codereview.chromium.org/2556803004
Cr-Commit-Position: refs/heads/master@{#436822}

Former-commit-id: d76ff3eba94442beb49b45c1bdc7abca39117a91